@@ -94,18 +94,27 @@ redis:
 # subset (the first, plus then the latest in each major.minor).
 ioredis-v2-v4:
   name: ioredis
-  versions: '2.0.0 || 2.0.1 || 2.1.0 || 2.2.0 || 2.3.1 || 2.4.3 || 2.5.0 || 3.0.0 || 3.1.4 || 3.2.2 || >3.2.2 <4'
+  versions: '2.0.0 || 2.0.1 || 2.1.0 || 2.2.0 || 2.3.1 || 2.4.3 || 2.5.0 || 3.0.0 || 3.1.4 || ^3.2.2'
   commands: node test/instrumentation/modules/ioredis.test.js
+  update-versions:
+    mode: latest-minors
+    include: '>=2.0.0 <4'
 ioredis-v4-v5:
   name: ioredis
-  versions: '4.0.0 || 4.0.2 || 4.1.0 || 4.2.3 || 4.3.1 || 4.4.0 || 4.5.1 || 4.6.3 || 4.7.0 || 4.8.0 || 4.9.0 || 4.9.5 || 4.10.4 || 4.11.2 || 4.12.2 || 4.13.1 || 4.14.4 || 4.15.1 || 4.16.3 || 4.17.3 || 4.18.0 || 4.19.4 || 4.20.0 || 4.21.0 || 4.22.0 || 4.23.1 || 4.24.6 || 4.25.0 || 4.26.0 || 4.27.11 || ^4.28.0'
+  versions: '4.0.0 || 4.0.2 || 4.1.0 || 4.2.3 || 4.3.1 || 4.4.0 || 4.5.1 || 4.6.3 || 4.7.0 || 4.8.0 || 4.9.5 || 4.10.4 || 4.11.2 || 4.12.2 || 4.13.1 || 4.14.4 || 4.15.1 || 4.16.3 || 4.17.3 || 4.18.0 || 4.19.4 || 4.20.0 || 4.21.0 || 4.22.0 || 4.23.1 || 4.24.6 || 4.25.0 || 4.26.0 || 4.27.11 || ^4.28.5'
   node: '>=6'
   commands: node test/instrumentation/modules/ioredis.test.js
+  update-versions:
+    mode: latest-minors
+    include: '>=4.0.0 <5'
 ioredis:
   name: ioredis
-  versions: '^5.0.0'
+  versions: '5.0.0 || 5.0.6 || 5.1.0 || 5.2.6 || ^5.3.2'
   node: '>=12.22.0'
   commands: node test/instrumentation/modules/ioredis.test.js
+  update-versions:
+    mode: latest-minors
+    include: '>=5.0.0 <6'
 
 pg-old-node:
   name: pg
@@ -138,8 +147,11 @@ pg-new-node:
 # Latest mongodb-core release (v3.2.7) was released in 2019. We test a subset
 # of the full supported range.
 mongodb-core:
-  versions: '1.2.19 || 1.2.32 || 1.3.21 || 2.0.14 || 2.1.20 || 3.0.11 || 3.1.11 || 3.2.7' # latest minors subset of '>=1.2.19 <4'
+  versions: '1.2.19 || 1.2.32 || 1.3.21 || 2.0.14 || 2.1.20 || 3.0.11 || 3.1.11 || ^3.2.7'
   commands: node test/instrumentation/modules/mongodb-core.test.js
+  update-versions:
+    mode: latest-minors
+    include: '>=1.2.19 <4' # latest minors subset of '>=1.2.19 <4'
 
 mongodb-3:
   name: mongodb
@@ -476,7 +488,7 @@ fastify-v2:
 fastify-v3:
   name: fastify
   # Update versions periodically with "./dev-utils/tav-versions-fastify.sh".
-  versions: '3.0.0 || 3.6.0 || 3.14.2 || 3.20.1 || 3.24.0 || 3.29.0 || 3.29.5 || >3.29.5 <4' # subset of '>=3 <4'
+  versions: '3.0.0 || 3.6.0 || 3.14.2 || 3.20.1 || 3.24.0 || 3.29.0 || ^3.29.5'
   peerDependencies: '@fastify/formbody@^6.0.1'
   node: '>=10'
   commands:
@@ -484,10 +496,13 @@ fastify-v3:
     - node test/instrumentation/modules/fastify/async-await.test.js
     - node test/instrumentation/modules/fastify/set-framework.test.js
     - node test/sanitize-field-names/fastify.test.js
+  update-versions:
+    mode: max-5
+    include: '>=3 <4'
 fastify:
   name: fastify
   # Update versions periodically with "./dev-utils/tav-versions-fastify.sh".
-  versions: '4.0.0 || 4.2.1 || 4.5.2 || 4.8.1 || 4.10.1 || 4.14.0 || 4.17.0 || >4.17.0' # subset of '>=4 <4.0.1 || >4.0.1 <4.16.0 || >4.16.2'
+  versions: '4.0.0 || 4.5.0 || 4.9.0 || 4.13.0 || 4.19.1 || 4.23.1 || ^4.24.3'
   peerDependencies: '@fastify/formbody@^7'
   node: '>=14.6.0'
   commands:
@@ -495,6 +510,10 @@ fastify:
     - node test/instrumentation/modules/fastify/async-await.test.js
     - node test/instrumentation/modules/fastify/set-framework.test.js
     - node test/sanitize-field-names/fastify.test.js
+  update-versions:
+    mode: max-5
+    include: '>=4 <5'
+    exclude: '4.0.1 || >=4.16.0 <=4.16.2'
 
 finalhandler:
   versions: '*'
@@ -531,45 +550,48 @@ aws-sdk:
 # However, @awk-sdk/client-* releases *very* frequently (almost every day) and there
 # is no need to test *all* those releases. Instead we statically list a subset
 # of versions to test.
+# Maintenance note: This should be updated periodically using:
+#   node ./dev-utils/update-tav-versions.js
+  
 '@aws-sdk/client-s3':
-  # Maintenance note: This should be updated periodically using:
-  #   node ./dev-utils/tav-versions.js @aws-sdk/client-s3 ">=3.15.0 <4"
-  #
-  # Test v3.15.0, every N=47 of 241 releases, and current latest.
-  versions: '3.15.0 || 3.56.0 || 3.159.0 || 3.236.0 || 3.319.0 || 3.400.0 || 3.412.0 || >3.412.0 <4'
+  versions: '3.15.0 || 3.72.0 || 3.170.0 || 3.264.0 || 3.347.0 || 3.435.0 || ^3.436.0'
   commands:
     - node test/instrumentation/modules/@aws-sdk/client-s3.test.js
   node: '>=14'
+  # Test v3.15.0, current latest and 5 versions in between.
+  update-versions:
+    mode: max-5
+    include: '>=3.15.0 <4'
 
 '@aws-sdk/client-dynamodb':
-  # Maintenance note: This should be updated periodically using:
-  #   node ./dev-utils/tav-versions.js @aws-sdk/client-dynamodb ">=3.15.0 <4"
-  #
-  # Test v3.15.0, every N=44 of 225 releases, and current latest.
-  versions: '3.15.0 || 3.55.0 || 3.165.0 || 3.234.0 || 3.312.0 || 3.398.0 || 3.410.0 || >3.410.0 <4'
+  versions: '3.15.0 || 3.72.0 || 3.180.0 || 3.261.0 || 3.344.0 || 3.435.0 || ^3.436.0'
   commands:
     - node test/instrumentation/modules/@aws-sdk/client-s3.test.js
   node: '>=14'
+  # Test v3.15.0, current latest and 5 versions in between.
+  update-versions:
+    mode: max-5
+    include: '>=3.15.0 <4'
 
 '@aws-sdk/client-sns':
-  # Maintenance note: This should be updated periodically using:
-  #   node ./dev-utils/tav-versions.js @aws-sdk/client-sns ">=3.15.0 <4"
-  #
-  # Test v3.15.0, every N=40 of 205 releases, and current latest.
-  versions: '3.15.0 || 3.53.0 || 3.154.0 || 3.218.0 || 3.294.0 || 3.360.0 || 3.370.0 || >3.370.0 <4'
+  versions: '3.15.0 || 3.67.0 || 3.178.0 || 3.259.0 || 3.337.0 || 3.431.0 || ^3.436.0'
   commands:
     - node test/instrumentation/modules/@aws-sdk/client-sns.test.js
   node: '>=14'
+  # Test v3.15.0, current latest and 5 versions in between.
+  update-versions:
+    mode: max-5
+    include: '>=3.15.0 <4'
 
 '@aws-sdk/client-sqs':
-  # Maintenance note: This should be updated periodically using:
-  #   node ./dev-utils/tav-versions.js @aws-sdk/client-sqs ">=3.15.0 <4"
-  #
-  # Test v3.15.0, every N=43 of 220 releases, and current latest.
-  versions: '3.15.0 || 3.55.0 || 3.165.0 || 3.238.0 || 3.319.0 || 3.409.0 || 3.418.0 || >3.418.0 <4'
+  versions: '3.15.0 || 3.58.0 || 3.171.0 || 3.257.0 || 3.335.0 || 3.429.0 || ^3.436.0'
   commands:
     - node test/instrumentation/modules/@aws-sdk/client-sqs.test.js
   node: '>=14'
+  # Test v3.15.0, current latest and 5 versions in between.
+  update-versions:
+    mode: max-5
+    include: '>=3.15.0 <4'
 
 # - undici@4.7.0 added its diagnostics_channel support.
 # - In undici@4.7.1 the `request.origin` property was added, which we need
