@@ -67,6 +67,8 @@ See the <<upgrade-to-v4>> guide.
 [float]
 ===== Chores
 
+* Add script to update TAV versions based on a config. ({pull}3680[#3680])
+
 
 [[release-notes-4.1.0]]
 ==== 4.1.0 - 2023/10/09
